# flutter_embedder

./: CMakeLists.txt  LICENSE  README.md
src/: flutter_application.cc  flutter_application.h  input_hook.cc  input_hook.h  log.h  macros.h  main.cc  platform_channel.cc  platform_channel.h  utils.cc  utils.h  wayland_display.cc  wayland_display.h
